--- a/_config.yml
+++ b/_config.yml
@@ -12,15 +12,15 @@
 # in the templates via {{ site.myvariable }}.
 
 #theme: jekyll-agency
-remote_theme: raviriley/agency-jekyll-theme
+remote_theme: StartupLimited/agency-jekyll-theme # raviriley/agency-jekyll-theme
 
 url    : "https://startup.limited" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 
-title      : Agency Jekyll Theme Demo
-email      : your-email@example.com #this is also the email contact forms will go to
-description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
-author     : Your Name
+title      : Startup.Limited
+email      : nikhilgohil11@gmail.com #this is also the email contact forms will go to
+description: "Much needed platform to get in touch with early-stage startups and their founders."
+author     : Nikhil Gohil
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
@@ -28,10 +28,7 @@ author     : Your Name
 locale: "en-US" # See available languages in _data/sitetext.yml
 
 analytics:
-  google: #Google Analytics tracking code here
-
-collections:
-  portfolio:
+  google: "G-32ZLF00335" #Google Analytics tracking code here
 
 markdown: kramdown
 
