--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -12,7 +12,7 @@
 en: &DEFAULT_EN
   header:
     title: Welcome to Startup.Limited!
-    text:  Share your startup details here. I promise to 
+    text:  EARLY-STAGE STARTUPS & THEIR FOUNDERS. 
     button: Schedule a call
     buttonlink: "https://calendly.com/nikhilgohil11/15min"
     
